conformance/tests/listenerset-dual-parentref-independence.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-dual-parentref
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: gw-dual-parentref-listener
    port: 80
    protocol: HTTP
    hostname: "gw-dual.com"
    allowedRoutes:
      namespaces:
        from: Same
  allowedListeners:
    namespaces:
      from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: ls-dual-parentref
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-dual-parentref
    namespace: gateway-conformance-infra
  listeners:
  - name: ls-dual-parentref-listener
    port: 80
    protocol: HTTP
    hostname: "ls-dual.com"
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-dual-parentref-both
  namespace: gateway-conformance-infra
spec:
  # We expect to see Accepted=True for both of these parentRefs
  parentRefs:
  - name: gateway-dual-parentref
    namespace: gateway-conformance-infra
  - kind: ListenerSet
    group: gateway.networking.k8s.io
    name: ls-dual-parentref
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dualboth
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-dual-parentref-one
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-dual-parentref
    namespace: gateway-conformance-infra
    # We expect to see Accepted=False for this parentRef because this listener
    # name does not exist on the Gateway resource
    sectionName: ls-dual-parentref-listener
  - kind: ListenerSet
    group: gateway.networking.k8s.io
    name: ls-dual-parentref
    namespace: gateway-conformance-infra
    # We expect to see Accepted=True for this parentRef because this listener
    # name does exist on the ListenerSet resource
    sectionName: ls-dual-parentref-listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dualone
    backendRefs:
    - name: infra-backend-v2
      port: 8080
